--- a/poster/poster_content.org
+++ b/poster/poster_content.org
@@ -67,8 +67,7 @@ The NILMTK is written exclusively in Python, and beyond it's other advantages it
 For both the training and benchmarking of these algorithms, test data is needed which includes both the aggregate 'site-meter' measurement as well as a 'sub-meter' measurement just upstream of the heat pump. Through a comprehensive study of the many existing NILM datasets, only few sites with heat-pumps were identified. Further more limitations within NILMTK would make it challenging to test increasing power aggregation levels. Data for five individual households with heat pumps has instead been artificially synthesized combining heat-pump and domestic load-profiles. This data was created following a schema to allow for compatibility with NILMTK which specifies how data/metadata is structured and stored.
 #+caption: High level flow-chart of the algorithm evaluation methodology
 #+NAME: figAlgEval
-[[file:Evaluation Methedology.drawio.png]]
-
+[[file:figures/Evaluation Methedology.drawio.png]]
 #+NAME: eqIncreasingAggLevels
 \begin{align}
 Y_{t,N} = \sum_{n=1}^{n=N}H_{n,t}+P_t
@@ -84,13 +83,11 @@ Increasing power aggregation is addressed by creating five datasets, each with a
 [[file:figures/IncreasingPowAggDataset.drawio.png]]
 
 
-
 * Results
 Algorithm performance for both increasing temporal and power aggregation levels is summarized in figure ref:figOverAllRes by comparing the two extremes of aggregation. Each bar represents the Root Mean Squared Error (RMSE) of each algorithm normalized against the RMSE averaged over all households in the set. Positive values thus represent an improvement relative to mean disaggregation, with the maximum possible value being unity, conversely a negative score states than predicting the mean value at all times is less erroneous than this algorithm and represent a serious failure of the algorithm in question. The error bars represent the upper and lower quartiles for each household in the set.
 #+caption: Average normalized performance for all algorithms at the highest temporal and power aggregation levels
 #+NAME: figOverAllRes
-[[file:../report/figures/overallResults.png]]
-
+[[file:figures/overallResults.png]]
 The effect of increasing aggregation levels is shown in figs ... by plotting aggregation level as the dependent variable against the normalized performance for each algorithm. CO and FHMM are not plotted due to poor performance at even the lowest aggregation level.
 [[file:figures/performansVsIncreasingAggLevel.png]]
 
